init: new handler add computer
